2005-11-14  Paul Gilliam  <pgilliam@us.ibm.com>

	* ppc-sysv-tdep.c (ppc64_sysv_abi_return_value): Copy code from
	ppc_sysv_abi_return_value() to handle a vector return value.

2005-11-14  Andrew Stubbs  <andrew.stubbs@st.com>

	* main.c (captured_main): Define struct cmdarg. Change type of cmdarg.
	Add new options --eval-command and alias -ex.
	Adjust --command to use the new struct cmdarg.
	Execute commands given with --eval-command.
	(print_gdb_help): Add new options --eval-command, -ex and mention -x.

2005-11-14  Andrew Stubbs  <andrew.stubbs@st.com>

	* infrun.c: Include main.h.
	(print_stop_reason): Set return_child_result_value on exit.
	* main.c (return_child_result): New variable.
	(return_child_result_value): Likewise.
	(captured_main): Add option --return-child-result.
	Replace call to target_detach and exit (in batch mode) with quit_force.
	(print_gdb_help): Add option --return-child-result.
	* top.c: Include main.h.
	(quit_force): Return child result if appropriate.
	* main.h (return_child_result, return_child_result_value): Declare.
	* Makefile.in (top.o, infrun.o): Add main.h to dependencies.

2005-11-13  Daniel Jacobowitz  <dan@codesourcery.com>

	Merge from mainline:
	2005-11-09  Randolph Chung <tausq@debian.org>
	* hppa-linux-nat.c (_initialize_hppa_linux_nat): Use
	hppa_linux_{store,fetch}_inferior_registers instead of
	arm_linux_{store,fetch}_inferior_registers.

2005-11-13  Daniel Jacobowitz  <dan@codesourcery.com>

	* arm-linux-tdep.c (eabi_linux_arm_le_breakpoint)
	(eabi_linux_arm_be_breakpoint): New variables.
	(arm_linux_init_abi): Use them.

2005-11-11  Stephane Carrez  <stcarrez@nerim.fr>

	PR tui/1995
	* tui/tui-command.c (tui_dispatch_ctrl_char): Handle CTRL-L even if the
	focus is on the command window.

2005-11-11  Stephane Carrez  <stcarrez@nerim.fr>

	* tui/tui-win.c (tui_update_gdb_sizes): Use tui_term_width() and
	tui_term_height() to restore the terminal size when leaving the
	TUI mode.
